avoid config syncs and updates on initial construction

BUG: 377067